--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <img class="logo" src="./img/logo.svg" alt="logo">
     </header>
 
+    <main>
+        <!-- TITLE -->
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Barners-Lee</h1>
+        <!-- SUBTITLE -->
+        <h2>Scritto da <a href="www.thebooleaner.com">The Booleaner</a></h2>
+        <!-- DATE -->
+        <h3>il 10/10/2020</h3>
+        <!-- IMAGES -->
+        <img src="./img/tim-1.jpg" alt="tim-1">
+        <img src="./img/tim-2.jpg" alt="tim-2">
+    </main>
+
 
 </body>
 </html>
