Add images descriptions

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <!-- IMAGES -->
         <img src="./img/tim-1.jpg" alt="tim-1">
         <img src="./img/tim-2.jpg" alt="tim-2">
+        <!-- IMAGES DESCRIPTIONS -->
+        <h3>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
+        <h3>2nd Photo: Wikimedia, by Paul Clarke</h3>
     </main>
 
 
