--- a/index.html
+++ b/index.html
@@ -18,12 +18,29 @@
         <h2>Scritto da <a href="www.thebooleaner.com">The Booleaner</a></h2>
         <!-- DATE -->
         <h3>il 10/10/2020</h3>
+        
         <!-- IMAGES -->
         <img src="./img/tim-1.jpg" alt="tim-1">
         <img src="./img/tim-2.jpg" alt="tim-2">
         <!-- IMAGES DESCRIPTIONS -->
         <h3>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
         <h3>2nd Photo: Wikimedia, by Paul Clarke</h3>
+
+        <!-- PARAGRAPH -->
+        <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
+            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
+            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis 
+            at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+        </p>
+
+        <!-- LIST -->
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+            <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+        </ul>
+
     </main>
 
 
