--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
             zzril delenit augue duis dolore te feugait nulla facilisi. 
         </p>
 
+        <!-- FOOTER -->
+        <footer>
+            <h2>Potrebbero interessarti</h2>
+            <div>
+                <img src="./img/monitor.jpg" alt="monitor">
+            </div>
+            <div>
+                <img src="./img/graph.jpg" alt="graph">
+            </div>
+        </footer>
+
     </main>
 
 
