--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         <h3>il 10/10/2020</h3>
         
         <!-- IMAGES -->
-        <img src="./img/tim-1.jpg" alt="tim-1">
-        <img src="./img/tim-2.jpg" alt="tim-2">
+        <div>
+            <img src="./img/tim-1.jpg" alt="tim-1">
+            <img src="./img/tim-2.jpg" alt="tim-2">
+        </div>
         <!-- IMAGES DESCRIPTIONS -->
-        <h3>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
-        <h3>2nd Photo: Wikimedia, by Paul Clarke</h3>
+        <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
+        <h4>2nd Photo: Wikimedia, by Paul Clarke</h3>
 
         <!-- PARAGRAPH -->
         <p>
@@ -88,16 +90,11 @@
         <!-- FOOTER -->
         <footer>
             <h2>Potrebbero interessarti</h2>
-            <div>
-                <img src="./img/monitor.jpg" alt="monitor">
-            </div>
-            <div>
-                <img src="./img/graph.jpg" alt="graph">
-            </div>
+            <div>Lorem impsum dolor</div>
+            <div>Lorem impsum dolor</div>
         </footer>
 
     </main>
-
 
 </body>
 </html>
