--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <table>
             <thead>
                 <tr>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
+                    <th class="larger">Lorem ipsum dolor</th>
+                    <th class="larger">Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="cyan">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -68,7 +68,7 @@
                         Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. 
                         Totam saepe quibusdam natus harum.</td>
                 </tr>
-                <tr>
+                <tr class="cyan">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
