--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <img src="./img/tim-2.jpg" alt="tim-2">
         </div>
         <!-- IMAGES DESCRIPTIONS -->
-        <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
-        <h4>2nd Photo: Wikimedia, by Paul Clarke</h3>
+        <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
+        <h5>2nd Photo: Wikimedia, by Paul Clarke</h3>
 
         <!-- PARAGRAPH -->
         <p>
@@ -89,9 +89,9 @@
 
         <!-- FOOTER -->
         <footer>
-            <h2>Potrebbero interessarti</h2>
-            <div>Lorem impsum dolor</div>
-            <div>Lorem impsum dolor</div>
+            <h3>Potrebbero interessarti</h2>
+            <div class="img bg_monitor"><h4>Lorem impsum dolor</h4></div>
+            <div class="img bg_graph"><h4>Lorem impsum dolor</h4></div>
         </footer>
 
     </main>
