[FIX] create a class for margin top

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <h3>il 10/10/2020</h3>
         
         <!-- IMAGES -->
-        <div>
+        <div class="margin_top30px">
             <img src="./img/tim-1.jpg" alt="tim-1">
             <img src="./img/tim-2.jpg" alt="tim-2">
         </div>
         <!-- IMAGES DESCRIPTIONS -->
-        <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h3>
-        <h5>2nd Photo: Wikimedia, by Paul Clarke</h3>
+        <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h5>
+        <h5>2nd Photo: Wikimedia, by Paul Clarke</h5>
 
         <!-- PARAGRAPH -->
         <p>
@@ -37,7 +37,7 @@
         </p>
 
         <!-- LIST -->
-        <ul>
+        <ul class="margin_top30px">
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
             <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
@@ -45,7 +45,7 @@
 
         <!-- TABLE -->
 
-        <table>
+        <table class="margin_top30px">
             <thead>
                 <tr>
                     <th class="larger">Lorem ipsum dolor</th>
@@ -88,7 +88,7 @@
         </p>
 
         <!-- FOOTER -->
-        <footer>
+        <footer class="margin_top30px">
             <h3>Potrebbero interessarti</h2>
             <div class="img bg_monitor"><h4>Lorem impsum dolor</h4></div>
             <div class="img bg_graph"><h4>Lorem impsum dolor</h4></div>
