Add Bonus folder with content

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -24,7 +24,6 @@
             <img src="./img/tim-1.jpg" alt="tim-1">
             <img src="./img/tim-2.jpg" alt="tim-2">
         </div>
-
         <!-- IMAGES DESCRIPTIONS -->
         <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h5>
         <h5>2nd Photo: Wikimedia, by Paul Clarke</h5>
@@ -45,6 +44,7 @@
         </ul>
 
         <!-- TABLE -->
+
         <table class="margin_top30px">
             <thead>
                 <tr>
@@ -90,12 +90,8 @@
         <!-- FOOTER -->
         <footer class="margin_top30px">
             <h3>Potrebbero interessarti</h2>
-            <div class="img bg_monitor">
-                <h4>Lorem impsum dolor</h4>
-            </div>
-            <div class="img bg_graph">
-                <h4>Lorem impsum dolor</h4>
-            </div>
+            <div class="img bg_monitor"><h4>Lorem impsum dolor</h4></div>
+            <div class="img bg_graph"><h4>Lorem impsum dolor</h4></div>
         </footer>
 
     </main>
