--- a/bonus/index.html
+++ b/bonus/index.html
@@ -20,7 +20,7 @@
         <h3>il 10/10/2020</h3>
         
         <!-- IMAGES -->
-        <div class="margin_top30px">
+        <div class="center margin_top30px">
             <img src="./img/tim-1.jpg" alt="tim-1">
             <img src="./img/tim-2.jpg" alt="tim-2">
         </div>
